--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,14 @@
   "dependencies": {
     "@types/egg": "^1.5.0",
     "egg": "^2.6.1",
+    "egg-passport": "^2.1.1",
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^5.2.2",
-    "mysql2": "^2.1.0"
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.1.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize-cli": "^6.2.0",
+    "tsconfig-paths": "^3.9.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
