third party logins

--- a/server/package.json
+++ b/server/package.json
@@ -25,10 +25,14 @@
     "@types/egg": "^1.5.0",
     "egg": "^2.6.1",
     "egg-passport": "^2.1.1",
+    "egg-passport-github": "^1.0.0",
+    "egg-passport-google": "^1.0.1",
+    "egg-passport-local": "^1.2.1",
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
+    "passport-github": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.2.0",
     "tsconfig-paths": "^3.9.0"
