demo for param decorator

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -22,7 +22,8 @@
     "inlineSourceMap": true,
     "importHelpers": true,
     "paths": {
-      "config/*": ["config/*"]
+      "config/*": ["config/*"],
+      "egg-shell-decorators": ["../egg-shell-decorators"]
     },
     "baseUrl": "."
   },
