--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@types/egg": "^1.5.0",
+    "class-validator": "^0.12.2",
     "egg": "^2.6.1",
     "egg-passport": "^2.1.1",
     "egg-passport-github": "^1.0.0",
