--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "egg-passport-local": "^1.2.1",
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^5.2.2",
+    "egg-shell-decorators-plus": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "passport-github": "^1.1.0",
