added prod config

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "declarations": true
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-sign-in-egg-server",
+    "start": "cross-env EGG_SERVER_ENV=prod egg-scripts start --daemon --title=egg-server-sign-in-egg-server",
     "stop": "egg-scripts stop --title=egg-server-sign-in-egg-server",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
@@ -26,6 +26,7 @@
     "@types/lru-cache": "^5.1.0",
     "@types/uuid": "^8.3.0",
     "class-validator": "^0.12.2",
+    "cross-env": "^7.0.2",
     "egg": "^2.6.1",
     "egg-passport": "^2.1.1",
     "egg-passport-github": "^1.0.0",
@@ -33,10 +34,10 @@
     "egg-passport-local": "^1.2.1",
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^5.2.2",
+    "egg-shell-decorators-plus": "^0.2.0",
     "jsonwebtoken": "^8.5.1",
     "lru-cache": "^6.0.0",
     "mysql2": "^2.1.0",
-    "egg-shell-decorators-plus": "^0.2.0",
     "passport-github": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.2.0",
