--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -26,5 +26,11 @@
     },
     "baseUrl": "."
   },
-  "exclude": ["app/public", "app/views", "node_modules*", "database"]
+  "exclude": [
+    "app/public",
+    "app/views",
+    "node_modules*",
+    "database",
+    "coverage"
+  ]
 }
