--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "cross-env": "^7.0.2",
     "egg": "^2.6.1",
     "egg-full-qiniu": "^1.1.6",
+    "egg-multipart": "^2.10.3",
     "egg-passport": "^2.1.1",
     "egg-passport-github": "^1.0.0",
     "egg-passport-google": "^1.0.1",
