--- a/server/package.json
+++ b/server/package.json
@@ -33,14 +33,17 @@
     "egg-full-qiniu": "^1.1.6",
     "egg-multipart": "^2.10.3",
     "egg-passport": "^2.1.1",
+    "egg-passport-facebook": "^1.0.1",
     "egg-passport-github": "^1.0.0",
     "egg-passport-google": "^1.0.1",
+    "egg-passport-local": "^1.2.1",
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^5.2.2",
     "egg-shell-decorators-plus": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "lru-cache": "^6.0.0",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.14",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "qiniu": "^7.3.2",
@@ -53,6 +56,7 @@
   "devDependencies": {
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
+    "@types/nodemailer": "^6.4.0",
     "@types/sharp": "^0.26.0",
     "@types/supertest": "^2.0.0",
     "autod": "^3.0.1",
