--- a/server/package.json
+++ b/server/package.json
@@ -40,12 +40,14 @@
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^5.2.2",
     "egg-shell-decorators-plus": "^0.2.2",
+    "egg-view-pug": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "lru-cache": "^6.0.0",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.14",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
+    "pug": "^3.0.0",
     "qiniu": "^7.3.2",
     "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.2.0",
@@ -57,6 +59,7 @@
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
     "@types/nodemailer": "^6.4.0",
+    "@types/pug": "^2.0.4",
     "@types/sharp": "^0.26.0",
     "@types/supertest": "^2.0.0",
     "autod": "^3.0.1",
@@ -66,6 +69,7 @@
     "egg-mock": "^3.16.0",
     "eslint": "^6.7.2",
     "eslint-config-egg": "^8.0.0",
+    "jsonwebtoken": "^8.5.1",
     "tslib": "^1.9.0",
     "typescript": "^3.0.0"
   },
