--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,11 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "quotes": "off"
+    "quotes": "off",
+    "comma-dangle": "off",
+    "array-bracket-spacing":"off",
+    "spaced-comment":"off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/indent": "off"
   }
 }
