feat(markdown): wIP on markdown collaboration

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "quotes": "off",
     "comma-dangle": "off",
     "array-bracket-spacing":"off",
+    "arrow-parens":"off",
     "spaced-comment":"off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/indent": "off"
